# Movie-recommendation-System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
api/: main.py
apps/: streamlit_app.py
data/metadata/: sample_movie_metadata.json
docs/: architecture.md  deployment.md
src/movie_recommender/: __init__.py
src/movie_recommender/api/: app.py  schemas.py
src/movie_recommender/cli/: main.py
src/movie_recommender/config/: settings.py
src/movie_recommender/data/: catalog.py  download.py  metadata.py  preprocess.py  schemas.py
src/movie_recommender/features/: content.py
src/movie_recommender/llm/: base.py  factory.py  ollama_backend.py  transformers_backend.py
src/movie_recommender/models/: autoencoder.py  matrix_factorization.py
src/movie_recommender/ranking/: __init__.py  audience.py
src/movie_recommender/recommenders/: __init__.py  base.py  content.py  hybrid.py  popularity.py  svd.py
src/movie_recommender/services/: bundle.py  evaluation.py  inference.py  metrics.py  training.py
src/movie_recommender/utils/: io.py  logging.py
tests/: conftest.py  helpers.py  test_api.py  test_audience_ranking.py  test_content_query_features.py  test_data_pipeline.py  test_download.py  test_models.py  test_query_parser.py  test_service.py  test_ui_helpers.py
